# puzzel

./: .gitignore  .history  CHANGELOG.md  LICENSE  devenv.nix  devenv.yaml  flake.nix  puzzel.cabal
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: gac0q0irg6sgk4wpzrkjiivfsahaxhji-source
app/: Main.hs
nix/: hix.nix
src/: Arr.hs  CPS.hs  Com.hs  Comonad.hs  Cont.hs  Delimited.hs  Demo1.hs  Demo2.hs  Demo3.hs  Demo4.hs  Eff.hs  EffD.hs  Exists.hs  FingerTree.hs  Free.hs  FuncDep.hs  GADT.hs  Heftia.hs  Hei.hs  ISO.hs  Imperative.hs  Impred.hs  Kinds.hs  LambdaArrow.hs  LambdaPi.hs  Len.hs  LevityPoly.hs  Lists.hs  MT.hs  MicroLens.hs  MonoRestri.hs  Optics.hs  Pattern.hs  Playground.hs  Puzzel.hs  RecordUpdates.hs  Recursive.hs  STM.hs  Subtyping.hs  THIH.hs  (+5 more)
src/Core/: Syntax.hs
src/Eval/: CallByNeed.hs  HOAS.hs  IO.hs  PHOAS.hs
src/FOmega/: Syntax.hs
src/HM/: Eval.hs  Infer.hs  InferC.hs  Lexer.hs  Parser.hs  Pretty.hs  Repl.hs  Syntax.hs  Type.hs  TypeError.hs
src/HM/Infer/: Offline.hs  Online.hs  Subst.hs  TypeEnv.hs  TypeError.hs
src/Language/: Moonbit.hs
src/STLC/: Arith.hs  Stlc.hs
src/Untyped/: Eval.hs  Parser.hs  Pretty.hs  Repl.hs  Syntax.hs
