cabal-version: 3.4
name: puzzel
version: 0.1.0.0
license: BSD-2-Clause
license-file: LICENSE
category: Game
build-type: Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

library thoughts
  exposed-modules:
    CPS
    Com
    Eff
    EffD
    FuncDep
    GADT
    ISO
    Imperative
    Impred
    Kinds
    LambdaArrow
    LambdaPi
    Len
    LevityPoly
    Lists
    MT
    MicroLens
    MonoRestri
    Playground
    Puzzel
    RecordUpdates
    THIH
    Traversable
    Untyped.Syntax
    Untyped.Repl
    Untyped.Eval
    Untyped.Parser
    Untyped.Pretty
    STLC.Arith
    STLC.Stlc
    Eval.CallByNeed
    Eval.HOAS
    Eval.PHOAS
    Eval.IO
    HM.Syntax
    HM.Repl
    HM.Parser
    HM.Lexer
    HM.Pretty
    HM.Infer
    HM.Eval
    HM.Type
    HM.InferC
    HM.Infer.TypeError
    HM.Infer.Online
    HM.Infer.Offline
    HM.Infer.TypeEnv
    HM.Infer.Subst

  hs-source-dirs:
    src

  build-depends:
    aeson,
    base,
    comonad,
    containers,
    unordered-containers,
    effectful,
    lens,
    mtl,
    parsec,
    text,
    type-operators,
    pretty,
    haskeline,

  default-language: GHC2024
  default-extensions:
    TypeFamilies
    FunctionalDependencies
    OverloadedRecordDot
    RecordWildCards

executable puzzel
  import: warnings
  main-is: Main.hs
  build-depends:
    base

  hs-source-dirs: app
  default-language: GHC2024
