cabal-version:   3.4
name:            puzzel
version:         0.1.0.0
license:         BSD-2-Clause
license-file:    LICENSE
category:        Game
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

library thoughts
  exposed-modules:
    Com
    CPS
    Eff
    EffD
    Eval.CallByNeed
    Eval.HOAS
    Eval.IO
    Eval.PHOAS
    FuncDep
    GADT
    HM.Eval
    HM.Infer.Offline
    HM.Infer.Online
    HM.Infer.Subst
    HM.Infer.TypeEnv
    HM.Infer.TypeError
    HM.Lexer
    HM.Parser
    HM.Pretty
    HM.Repl
    HM.Syntax
    HM.Type
    Imperative
    Impred
    ISO
    Kinds
    LambdaArrow
    LambdaPi
    Len
    LevityPoly
    Lists
    MicroLens
    MonoRestri
    MT
    Playground
    Puzzel
    RecordUpdates
    STLC.Arith
    STLC.Stlc
    THIH
    Traversable
    Untyped.Eval
    Untyped.Parser
    Untyped.Pretty
    Untyped.Repl
    Untyped.Syntax

  hs-source-dirs:     src
  build-depends:
    , aeson
    , base
    , comonad
    , containers
    , effectful
    , haskeline
    , lens
    , mtl
    , parsec
    , pretty
    , repline
    , text
    , type-operators
    , unordered-containers

  default-language:   GHC2024
  default-extensions:
    FunctionalDependencies
    OverloadedRecordDot
    RecordWildCards
    TypeFamilies

executable puzzel
  import:           warnings
  main-is:          Main.hs
  build-depends:    base
  hs-source-dirs:   app
  default-language: GHC2024
